force-app/main/default/objects/LAD_Quote__c/LAD_Quote__c.object-meta.xml
<CustomObject>
    <description>FOUK-9920: Custom object for generation of Quote for a WebCart.</description>
    <label>Quote</label>
    <nameField>
        <displayFormat>QUO-{000000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>