force-app/main/default/objects/LAD_Quote__c/fields/LAD_Account__c.field-meta.xml
<CustomField>
    <fullName>LAD_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-9920: Lookup Relationship with Account Obj.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>