force-app/main/default/objects/LAD_Quote__c/fields/LAD_Contact__c.field-meta.xml
<CustomField>
    <fullName>LAD_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-9920: Lookup Relationship with Contact Obj.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>