force-app/main/default/objects/LAD_Quote__c/fields/LAD_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>LAD_Total_Price__c</fullName>
    <description>FOUK-9920: Sum of all related Quote Item record Prices.</description>
    <label>Total Price</label>
    <summarizedField>LAD_Quote_Item__c.LAD_Price__c</summarizedField>
    <summaryForeignKey>LAD_Quote_Item__c.LAD_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>